--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html, body{
     width: 100%;
     height: 100vh;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 a{
     text-decoration: none;
@@ -114,6 +115,8 @@ a{
 }
 
 .Projects_block{
+    margin-left: 2%;
+    margin-right: 2%;
     margin-top: 3%;
     width: 100%;
     height: auto;
@@ -121,6 +124,17 @@ a{
     justify-content: center;
     flex-direction: column;
 
+}
+
+.TitleProjects{
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:5%;
+    font-family: source Code pro;
+    font-size: 25px;
+    color:#000;
+    margin-bottom: -5%;
 }
 .Projects_header{ 
     display: flex;
@@ -142,15 +156,12 @@ a{
     
 }
 .item_text{
-    
 
     position: relative;
     width: 30%;
     min-width: 150px;
     display: flex;
     flex-direction: column;
-    
-
     font-family: source Code pro;
     font-weight: 500;
     font-size: clamp(0.5rem, 1vw, 3rem);   
@@ -166,7 +177,7 @@ a{
 .item_description{
     font-family: source Code pro;
     font-weight: 500;
-    font-size: clamp(0.5rem, 1vw, 3rem);  
+    font-size: clamp(12px, 1vw, 3rem);  
     margin-bottom: 2%;
 
 }
@@ -207,8 +218,18 @@ a{
     position: relative;
     width: 100%;
     height: 50%;
-}
 
+}
+@media screen and (max-width: 375px){
+    .Skills_textMain{
+        margin-top: 0%;
+        margin-bottom: 1%;
+        margin-left: -50%;
+    }
+    .Skills_Languages{
+        margin-left: -50%;
+    }
+}
 @media screen and (max-width: 650px) {
     .secondBlock_gradient{
         width: 100%;
@@ -219,6 +240,28 @@ a{
     .button_with_borders{   
         min-width: 80px;
         height: 40px;
+    }
+    .item_portfolio{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-top: 10%;
+        width: 100%;
+        height: auto;
+        gap: 10%;
+    }
+    .item_text{
+        width: 80%;
+
+    }
+    .item_image{
+        width: 80%;
+        position: relative;
+        min-width: 190px;
+        border-radius: 7px;
+        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+        height: 100%;
     }
   }
 
